--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "mkdir -p build",
-    "build": "rollup -c rollup.config.js -o build/bundle.js"
+    "build": "rollup -c rollup.config.js -o build/bundle.js",
+    "start": "npm run build && python -m SimpleHTTPServer"
   },
   "author": "Vitor Baptista",
   "license": "MIT",
